<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="150"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/save_textview"
            android:layout_marginLeft="20dp"
            android:text="@string/cancel"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/edit_profile"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/save_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="@string/save"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1770"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="105"
            android:background="#efeff4"
            android:gravity="left|center"
            android:paddingLeft="5dp"
            android:text="@string/info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:typeface="normal" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="285"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/user_pic" />

                <Button
                    android:id="@+id/button"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="Update"
                    android:textSize="7sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:background="@color/textColorPrimary"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:text="@string/big_first_name"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/editText6"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/textView11"
                        android:background="@color/textColorPrimary"
                        android:gravity="left|center"
                        android:hint="@string/big_first_name"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:background="@color/textColorPrimary"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:text="@string/big_last_name"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/editText7"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/textView10"
                        android:background="@color/textColorPrimary"
                        android:gravity="left|center"
                        android:hint="@string/big_last_name"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:textSize="14sp" />
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="115"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text="@string/gender"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:typeface="sans" />

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="@color/textColorPrimary"
                android:dropDownWidth="fill_parent"
                android:entries="@array/gender"
                android:paddingRight="6dp"
                android:paddingTop="8dp"
                android:prompt="@string/gender_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="115"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text="@string/birthday"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/birth_textview"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="@color/textColorPrimary"
                android:ems="10"
                android:gravity="center|right"
                android:inputType="date"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="115"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text="@string/company"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="@color/textColorPrimary"
                android:gravity="center|right"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="115"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text="@string/profession"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="@color/textColorPrimary"
                android:gravity="center|right"
                android:singleLine="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="115"
            android:background="#efeff4"
            android:gravity="left|center"
            android:paddingLeft="5dp"
            android:text="@string/phone"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:typeface="normal" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="115"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text="@string/mobile"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="@color/textColorPrimary"
                android:ems="10"
                android:gravity="center|right"
                android:inputType="phone"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="115"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text="@string/work"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="@color/textColorPrimary"
                android:ems="10"
                android:gravity="center|right"
                android:inputType="phone"
                android:singleLine="true" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="115"
            android:background="#efeff4"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/payment"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <Button
                android:id="@+id/payment_add_imagebutton"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btnpay_add"
                android:text="ADD"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="18sp" />
        </RelativeLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="430" />
    </LinearLayout>

</LinearLayout>