<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/requests_background"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="65"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="950"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="95"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/btnforgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="63"
            android:orientation="vertical"></LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="153"
            android:orientation="vertical" />

        <EditText
            android:id="@+id/first_name_et"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="145"
            android:background="@mipmap/edittext"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:orientation="vertical"></LinearLayout>

        <EditText
            android:id="@+id/last_name_et"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="145"
            android:background="@mipmap/edittext"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:orientation="vertical" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="145"
            android:background="@mipmap/edittext"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:orientation="vertical" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="145"
            android:background="@mipmap/edittext"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:orientation="vertical" />

        <EditText
            android:id="@+id/retype_et"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="145"
            android:background="@mipmap/edittext"
            android:ems="10"
            android:hint="@string/re_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="130"
            android:orientation="vertical" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selector"
            android:text="SIGN UP"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="140"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/already_account"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/signin_button"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="150"
                android:gravity="center"
                android:text="Sign in"
                android:textColor="#27ccc0" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="140"
                android:orientation="vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:orientation="vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="65"
        android:orientation="vertical" />

</LinearLayout>